# some_other_repo

./: .gitignore  Dockerfile  README.md  create_package.py  pyproject.toml
some_other_repo/: main.py
